--- a/views/buses.erb
+++ b/views/buses.erb
@@ -1,11 +1,12 @@
-<p><b><%= @area_nicename %></b> going <b><%= @direction_nicename %></b> at <b><%= @time.strftime("%H:%M") %></b></p>
+<p>You're at <b><%= @area_nicename %></b> going <b><%= @direction_nicename %></b> at <b><%= @time.strftime("%H:%M") %></b></p>
+<p>Want to <a href="/">try a different search</a>?<p>
+
 <ul>
   <% @buses.each do |bus| %>
     <% if bus["expected_departure_time"] %>
       <li><b><%= bus["line"] %></b> to <%= bus["direction"] %> at <b><%= bus["best_departure_estimate"] %></b></li>
     <% else %>
-      <li>(<b><%= bus["line"] %> to <%= bus["direction"] %> <b>scheduled <%= bus["best_departure_estimate"] %></b>)</li>
+      <li>(<b><%= bus["line"] %></b> to <%= bus["direction"] %> <b>scheduled <%= bus["best_departure_estimate"] %></b>)</li>
     <% end %>
   <% end %>
 </ul>
-<p><a href="/">Try again</a><p>
