Initial JQuery Mobile version.

--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,6 +1,6 @@
 <p>There's no need to wait at bus stops at night - UOYBus will tell you the live running times of #4 and #44.</p>
 
-<form action="/live" method="post">
+<form action="/live" method="post" data-transition="slide">
   I'm at
   <select name="area">
     <% @areas.each_with_index do |area, i| %>
