--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,24 @@
-<h1>University Of York Live Buses</h1>
-
-<%= yield %>
-
-<p>Built by <a href="https://46b.it">Michael Mokrysz</a>. <a href="https://46b.it/contact">Feedback is welcome!</a></p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="initial-scale=1,
+				   width=device-width, height=device-height, 
+				   target-densitydpi=device-dpi" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
+  </head>
+  <div data-role="page" data-id="myheader" data-position="fixed">
+    <div data-role="header">
+      <h1>University Of York Live Buses</h1>
+    </div>
+    <div role="main" class="ui-content">
+      <%= yield %>
+    </div>
+    <div data-role="footer" data-id="myfooter">
+      <p>Built by <a href="https://46b.it">Michael Mokrysz</a>. <a href="https://46b.it/contact">Feedback is welcome!</a></p>
+    </div>
+  </div>
+</html>
